Plausible looking init sequence for UP5k. Still doesn't want to talk to me

--- a/software/apps/blinky/CMakeLists.txt
+++ b/software/apps/blinky/CMakeLists.txt
@@ -4,6 +4,10 @@ add_executable(blinky
 
 target_link_libraries(blinky
 	pico_stdlib
+	hardware_pio
 )
+
+pico_generate_pio_header(blinky ${CMAKE_CURRENT_LIST_DIR}/fpga_spi_config.pio)
+
 
 pico_add_extra_outputs(blinky)
